refactor: add color indicator when howering on a link

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,8 @@
   --gradient-green-from: #89cda4;
   --gradient-green-to: #13b6dc;
   --gradient-green-foreground: #ffffff;
+
+  --link-hover: #13b6dc;
 }
 
 /* @media (prefers-color-scheme: dark) {
