--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@ body {
 
 @layer components {
   .custom-scrollbar {
-    --sb-track-color: #ffffff;
+    --sb-track-color: transparent;
     --sb-thumb-color: #dbdbdb;
     --sb-size: 8px;
   }
